--- a/doc/src/stylus/component/fade.styl
+++ b/doc/src/stylus/component/fade.styl
@@ -17,5 +17,6 @@
 .mb-fade.in {
     animation-name: fadein;
     animation-duration: 1s;
+    animation-delay: .8s;
     animation-fill-mode: both;
 }
