--- a/doc/src/stylus/transition.styl
+++ b/doc/src/stylus/transition.styl
@@ -1,4 +1,5 @@
 //@import "../../node_modules/nib/lib/nib"
+@import "variable"
 
 .mb-anim-view
   display none
@@ -10,18 +11,6 @@
 .mb-anim-view-active  
   display block !important
   
-/* ==================    
- * Slide
- * ================== */
-@import "component/slide"  
-   
-/* ==================
- * Fade
- * ================== */
-@import "component/fade"
-
-/* ==================
- * Flip
- * ================== */
-@import "component/flip"
   
+@import "component/*"  
+   
